[tdb]
 - Configurable icon for chrome menu
 - Only one directory open (accordion)
 - empty check url result message
 - contextmenu redesign (http://jquery-plugins.net/image/plugin/create-context-menu-with-jquery-and-css.png)

[1.6]
 - hide entries from sidebar

[1.5]
 - Completely new settings page
 - Added customization options
 - Info page for new features
 - Help page after installation

[1.4]
 - Search function
 - Added mouseover openAction configuration
 - Toggle function for icon in chrome menu
 - Added possibility to add keyboard shortcuts

[1.3]
 - Optional userdata sharing
 - Extended Options-Page (Tabs for 'Configuration', 'Feedback' and 'Help Improving')
 - Optimized favicon loading mechanism

[1.2]
 - Middle click action configuration
 - Removed jQuery dependency
 - Code optimization
 - Minified js-files

[1.1]
 - Configuration extended
 - Added drag&drop functionality for changing bookmark positions
 - Optimized scroll behaviour of trackpads
 - Optimized settings page for hdpi screens

[1.0]
 - Sidebar with all bookmarks
 - Edit/Remove bookmarks and directories
 - Infos about bookmarks and directories
 - Check the bookmarks for changed or broken urls
 - Optional visual (icon on semitransparent background)
 - Fully configurable