@@ -58,6 +58,9 @@
   "contextmenu_toggle_fix": {
     "message": "Pin entries"
   },
+  "contextmenu_toggle_hidden": {
+    "message": "Show hidden entries"
+  },
   "contextmenu_delete_bookmark": {
     "message": "Delete Bookmark"
   },
@@ -76,11 +79,17 @@
   "contextmenu_new_tab": {
     "message": "Open in new tab"
   },
+  "contextmenu_open_children": {
+    "message": "Open bookmarks"
+  },
   "contextmenu_show_in_dir": {
     "message": "Show in directory"
   },
   "contextmenu_hide_from_sidebar": {
     "message": "Hide from sidebar"
+  },
+  "contextmenu_show_in_sidebar": {
+    "message": "Show in sidebar"
   },
   // [ OVERLAY ]
   "overlay_bookmark_title": {
