@@ -569,6 +569,13 @@ section#sidebar > div.scrollBox > ul a + ul {
 section#sidebar > div.scrollBox > ul a.opened + ul {
   height: auto;
 }
+section#sidebar > div.scrollBox > ul li.hidden > a {
+  opacity: 0.3;
+  font-style: italic;
+}
+section#sidebar > div.scrollBox > ul li.hidden > a:hover {
+  opacity: 0.5;
+}
 section#sidebar > div.scrollBox > ul li.isDragged {
   width: calc(100% - 5px);
   border: 3px dashed rgba(0, 0, 0, 0.2);
