@@ -287,6 +287,19 @@ section#sidebar {
 
       li {
 
+        &.hidden {
+
+          > a {
+            opacity: 0.3;
+            font-style: italic;
+
+            &:hover {
+              opacity: 0.5;
+            }
+          }
+
+        }
+
         &.isDragged {
           width: calc(100% - 5px);
           border: 3px dashed rgba(0, 0, 0, 0.2);
